<resources>
    <string name="app_name">SafeCircle</string>
    <string name="security">Security</string>
    <string name="sos">SOS</string>
    <string name="sos_text">In case of emergency, keep telling family members to contact me</string>
    <string name="guard">Guard</string>
    <string name="guard_text">Open when you are on a potentially dangerous journey.</string>
    <string name="my_family">My Family</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="wifi">WiFi</string>
</resources>